# aai-challenge-2

./: .env  Dockerfile  README.md  app.py  cookies.txt  docker-compose.yml  index.html  main.py  opts  package.json  pyproject.toml  requirements.txt  vite.config.ts
api/: __init__.py  client.py  cookies.txt  route.py  typedefs.py  utils.py
src/components/: Transcriber.vue
src/components/ui/button/: Button.vue
workspace/cloudflare-cli/: requirements.txt  setup.py
